traefik-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service-whoamai
  namespace: default
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: websecure
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30443
